jenkins/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: ${NGINX_INGRESS_IP}.nip.io
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
            path: /
